feat: change redis first
